tests/models/enum/unnamed/i8/pass/lt.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(lt = 2)]
        i8
    ),
}
fn main() {}
